<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TagKillActivity"
    tools:ignore="NestedWeights"
    >

    <!-- BT Warning -->
    <TextView
        android:id="@+id/bluetooth_permissions_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/bt_permission"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="11sp"
        android:visibility="gone"
        />

    <!-- Tags -->
    <LinearLayout
        android:id="@+id/resultLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#eef"
        android:orientation="vertical"
        android:layout_weight="2"
        >

        <!-- Target Tag -->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ddd"
            >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:text="@string/target_tag_title"
                android:textColor="#666"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#eee"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                >
                <TextView
                    android:id="@+id/targetTagTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/dash_placeholder"
                    android:textSize="16sp"
                    android:lines="1"
                    android:ellipsize="middle"
                    />
                <TextView
                    android:id="@+id/targetTagTIDTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textAlignment="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/dash_placeholder"
                    android:textSize="16sp"
                    android:lines="1"
                    android:ellipsize="middle"
                    />
            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            />

        <!-- Arming Count -->
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/listDivider"
                />
            <TextView
                android:id="@+id/armed1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#006600"
                android:layout_weight="1"
                android:visibility="invisible"
                />
            <View
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/listDivider"
                />
            <TextView
                android:id="@+id/armed2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#008800"
                android:layout_weight="1"
                android:visibility="invisible"
                />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider"
                />
            <TextView
                android:id="@+id/armed3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#00cc00"
                android:layout_weight="1"
                android:visibility="invisible"
                />
            <View
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/listDivider"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            />

        <!-- Armed Indicator -->
        <TextView
            android:id="@+id/armedTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:alpha="1"
            android:text="@string/activated_text"
            android:textColor="@color/armed_disabled_text"
            android:background="@color/armed_disabled_background"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="visible"
            />

        <!-- Success Indicator -->
        <TextView
            android:id="@+id/killSuccessTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:alpha="1"
            android:text="@string/killed_text"
            android:textColor="@color/armed_enabled_text"
            android:background="@color/red_200"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <!-- Failure Indicator -->
        <TextView
            android:id="@+id/killFailedTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:alpha="1"
            android:text="@string/failed_text"
            android:textColor="@color/armed_enabled_text"
            android:background="@color/blue_700"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <!-- Tag summary -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:background="#cce"
            android:layout_marginTop="12dp"
            >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:text="@string/tag_list_title"
                android:textColor="#000"
                android:layout_marginEnd="12dp"
                />
            <TextView
                android:id="@+id/totalTagsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="---"
                />
        </LinearLayout>

        <ListView
            android:id="@+id/resultListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="4"
            >
        </ListView>

    </LinearLayout>

    <!-- Power control -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        >
        <SeekBar
            android:id="@+id/powerSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/powerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_level_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0"
            />
    </LinearLayout>


    <!-- Options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:layout_marginBottom="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <CheckBox
                android:id="@+id/uniquesCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uniques_only_title"
                android:textColor="#0D47A1"
                android:minHeight="44dp"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button_text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <Spinner
                android:id="@+id/rfModeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                />
            <Spinner
                android:id="@+id/sessionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- Messages -->
    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#A00"
        android:textSize="16sp"
        />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:visibility="gone"
        >
        <Button
            android:id="@+id/scanButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_start_button_text"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/scanStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_stop_button_text"
            android:visibility="gone"
            />
    </LinearLayout>


</LinearLayout>